Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-58810

Menu uses a wrong cursor shape.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.9.0 Alpha
    • 5.8.0
    • Quick: Controls 2
    • None
    • bcbcb8d0d60b94fe9e739a9c95b4e78ac8184a0e

    Description

      If menu overlaps the TextField (or other item with a different cursor), the cursor takes the shape of overlapping cursor.

      import QtQuick 2.6
      import QtQuick.Controls 2.1
      
      ApplicationWindow {
          id: root
          width: 300
          height: 300
          visible: true
      
          Column {
              Button {
                  id: fileButton
                  text: "File"
                  onClicked: menu.open()
      
                  Menu {
                      id: menu
                      y: fileButton.height
                      x: fileButton.width
      
                      MenuItem {
                          text: "New..."
                      }
                      MenuItem {
                          text: "Open..."
                      }
                      MenuItem {
                          text: "Save"
                      }
                  }
              }
              TextField {
                  placeholderText: qsTr("Enter name")
              }
          }
      }
      

      Attachments

        1. testcursor.qml
          0.8 kB
        2. testcursor1.png
          testcursor1.png
          2 kB
        3. testcursor2.png
          testcursor2.png
          5 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mitch_curtis Mitch Curtis
            lom2k Alexander
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes