QQuickPopup: ensure that the cursor is correct when overlapping items

When a popup is over an item that has a different cursor (such as a
TextField), the cursor incorrectly took on that shape, because
QQuickPopup didn’t have an explicitly set cursor.

Task-number: QTBUG-58810
Change-Id: I4df6dd725cac027b2c30fe69ad81d9cd7e622c15
Reviewed-by: J-P Nurmi <jpnurmi@qt.io>